fix contrast accessibility issues

--- a/apps/prairielearn/public/stylesheets/local.css
+++ b/apps/prairielearn/public/stylesheets/local.css
@@ -345,6 +345,10 @@ a.badge {
   color: #dc3545;
 }
 
+.user-output-invalid-text {
+  color: #d02d3e;
+}
+
 .user-output.small,
 .user-output-invalid.small,
 small .user-output,
